# pytrilogy

./: .gitattributes  .gitignore  .preql_cache.json  AGENTS.md  ARCH_REVIEW_where_dual_scope.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  PERFORMANCE_ANALYSIS.md  README.md  SECURITY.md  _diag.py  build_backend.py  canonical_test.preql  codecov.yml  debug_duckdb.py  gcs_export.parquet  get_version.py  mkdocs.yml  pyproject.toml  pytest.ini  q30_staged.sql  readthedocs.yml  repro.preql  repro_debug.py  repro_driver.py  requirements-test.txt  requirements.txt  setup.py  sync_version.py  test.sql  test.txt  zq75_check.preql
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: publishperf-wip  pythonpackage.yml  pythonpublish.yml  wasm-wheel.yml
.scripts/: build_backend.py  debug_test.py  patch_wheels.py  sync_version.py
_preql_import_resolver/: __init__.py
demo/: README.md
demo/ecommerce/: ecommerce.preql
demo/so_concepts/: post.preql
demo/stack_overflow/: README.md  stack_overflow.preql
docker/: Dockerfile  build_image.sh
docs/: SPEC_query_derived_value_scopes.md  domain_graph_design.md  generate_reference_files.py  handoff_narrowing_soundness_residuals.md  handoff_rule_b_and_carveouts.md  merge_join_unification.md  merge_respell_drop_equal_design.md  requirements.txt  subset_union_join_design.md  type_validators_design.md
evals/: EVAL_LOOP_INSTRUCTIONS.md  README.md  analyze_agent_info_tokens.py  scoped_inner_join_intersection_matrix.md  trajectory_viewer.py
evals/common/: __init__.py  agent_runner.py  analyze_run.py  archive.py  categories.py  db.py  ingest_main.py  main.py  monitor.py  prompts.py  replay.py  report.py  schema_md.py  scoring.py  spec.py
evals/dabstep_agent/: .gitignore  README.md  db_build.py  download_data.py  query_prompts.json  run_eval.py  schema_notes.md  spec.py  tasks_all.json  tasks_dev.json
evals/report_model/: eval_runs.preql  report.md  trilogy.toml
evals/tpcds_agent/: .gitignore  .q01_hidden_grain_run.json  .q01_identity_run.json  .q11_hidden_grain_run.json  INDEX_churn_diagnosis_20260715.md  INDEX_diag_enriched_20260706.md  _dbg.py  _dbg2.py  (+346 more)
examples/: aoe2_debug.py  community_debug.py  debug_look.py  derived_testing.py  duckdb_testing.py  duckdb_testing_two.py  empty_environment_example.py  persist_testing.py
experiments/: creation.ipynb  debug.txt  environment.py  improved_join_debug.ipynb  randomness.py  setup_env.ipynb  the_look.ipynb
faa-demo/: README.md  aircraft.preql  aircraft_model.preql  airport.preql  entrypoint.preql  flight.preql  reporting.preql  setup.sql  trilogy.toml
hack/: example_ecommerce.py
local_scripts/: .v3_gate.txt  .v3_sweep_out.txt  .v4_fail_hunt.txt  .v4_fail_hunt2.txt  .v4_sweep_out.txt  PARSER_PERF_PLAN.md  PERFORMANCE_ANALYSIS.md  _compare_status.sh  _inspect_labels.py  _inspect_query.py  _inspect_query02.py  _inspect_query02_build.py  _inspect_query02_phases.py  _inspect_query02_pre_opt.py  _inspect_query02_twice.py  _inspect_query04.py  _inspect_query04b.py  _inspect_rowset.py  _q04_new.sql  _q04_ref.sql  _q39_new.sql  _q62.sql  _v3_v4_compare.py  capture_google_trace.py  collision_q.preql  debug_q04.py  debug_q08_cycle.py  diag_subq_q22.py  diag_subq_where.py  diag_tuple.py  discovery_v4.py  discovery_v4_compare.py  feeder_chain_pushlog.txt  feeder_chain_v3.sql  feeder_chain_v4.sql  feeder_chain_v4_nopush.sql  ga_reporting_discovery.py  google_trace.txt  probe_canon.py  probe_root_split.py  (+102 more)
memory/: project_composite_derived_join_drops_equality_key.md  project_crossrowset_inner_join_grainless_scalar.md  project_global_literal_aggregate_indexerror.md  project_left_derived_rowset_join_recursion.md  project_numeric_parameter_unsupported.md  project_parse_error_mislabeled_unexpected.md  project_q02_derived_join_key_no_connectivity_edge.md  project_q54_reference_store_fanout_fixed.md  project_rollup_having_crossrowset_drops_subtotals.md  project_scoped_inner_join_collapse_semijoin.md
preql/: __init__.py  constants.py  engine.py  executor.py  parser.py  utility.py
scratchpad/: full_run2.txt  repro66L.py  repro66S.py  repro66_3rs.py  repro66_neg.py  repro66_rawdim.py  repro66_synth.py  repro66min.py  repro66min2.py
scripts/: main.py
specs/: ingest_fk_inference.md
tests/: conftest.py  recursive_env.preql  test_anonymous_select_outputs.py  test_build_backend.py  test_coalesce_duplicate_cte_joins.py  test_condition_context.py  test_cross_rowset_having_membership_redirect.py  test_cross_rowset_inner_join_intersect.py  test_cross_rowset_inner_join_planner.py  test_cross_rowset_join_rowset_as_set.py  test_datatypes.py  test_declarations.py  test_derived_concepts.py  test_dialect_function_maps.py  test_discovery_nodes.py  test_enums.py  test_env.preql  test_env_functions.preql  test_env_import_indirect_one.preql  test_env_import_two.preql  test_env_types.preql  test_environment.py  test_execute_models.py  test_executor.py  test_failure.py  test_filter_bare_aggregate_content_grain.py  test_filter_cte_grouped_metric_projection.py  test_force_group_merge_repro.py  test_functions.py  test_functions_extras.py  test_fuzzer_found_regressions.py  test_having_post_aggregation_filter.py  test_having_resolution.py  test_having_semijoin_null_groups.py  test_hydration_phases.py  test_import_service.py  test_imports.py  test_incomplete_condition_disconnected.py  test_invalid_reference_sentinel.py  test_io_init.py  (+84 more)
trilogy/: __init__.py  constants.py  engine.py  executor.py  parser.py  render.py  staging.py  utility.py
trilogy/scripts/dependency/: Cargo.toml  README.md  build.sh  pyproject.toml  python_example.py  test_ds.preql
trilogy/scripts/dependency/src/: base.preql  directory_resolver.rs  graph.rs  lib.rs  main.preql  main.rs  orders.preql  parser.rs  preql.pest  python_bindings.rs  resolver.rs  trilogy.pest  trilogy_parser.rs
trilogy/scripts/dependency/tests/: cli_integration.rs  customer.preql
trilogy/scripts/dependency/tests/test_data/: base.preql  consumer.preql
ttl/: executor.py  parser.py
(+1804 files in other folders)
