[tool.pytest.ini_options]
markers = [
    "adventureworks",
    "adventureworks_execution",
]
log_cli_level="INFO"

[tool.ruff]
# Allow lines to be as long as 200 characters.
line-length = 200
lint.extend-select = ["I"]

[project]
name = "pytrilogy"
description = "Declarative, typed query language that compiles to SQL."
dynamic = ["version", "dependencies"]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.dynamic]
version = {attr = "trilogy.__version__"}
dependencies = {file = ["requirements.txt"]}