[package]
name = "preql-import-resolver"
# version is synced from python __init__ in build backend/deploy flow
version = "0.3.137"
edition = "2021"
description = "A CLI tool to parse Trilogy files and resolve import dependencies"
license = "MIT"

[lib]
name = "preql_import_resolver"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Parser generator
pest = "2.7"
pest_derive = "2.7"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization for structured output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Path manipulation
pathdiff = "0.2"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
