[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "preql-import-resolver"
version = "0.1.0"
description = "PreQL import dependency resolver"
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "_preql_import_resolver"
